2008-04-01  Simon Hausmann  <hausmann@webkit.org>

        Fix the non-mac build.

        * page/AXObjectCache.h: Don't reference AccessibilityObjects when
        building without accessibility.
        * page/AccessibilityObject.h: Don't include RetainPtr.h for non-mac
        builds.

2008-04-01  Holger Hans Peter Freyther  <holger.freyther@trolltech.com>

        Reviewed by Simon.

        * Do not store the QWebFrame associated with a ScrollView/FrameView
        in the WebCore::Widget.
        * Instead of asking the Widget for the QWebFrame use the QWebFramePrivate::core
        and QWebFramePrivate::kit function to convert from and to QWebFrame.

        * platform/Widget.h:
        * platform/qt/WidgetQt.cpp:
        (WebCore::WidgetPrivate::WidgetPrivate):
        (WebCore::Widget::containingWindow):

2008-04-01  Alice Liu  <alice.liu@apple.com>
        Patch by Beth Dakin <bdakin@apple.com> and Alice Liu

        Reviewed by Darin.

        Refactored WebCore Accessibility code.  Prior to this patch, WebCore
        accessibility was implemented in an ObjC class named WebCoreAXObject,
        with much of the "guts" in C++.  This patch the next natural step of
        factoring out the C++ code into a class named AccessibilityObject, and 
        in order to maintain the required ObjC object ties, also implements an
        ObjC class named AccessibilityObjectWrapper as a thin wrapper around the
        C++ object.  Internally within WebCore we operate on the C++ object as
        much as possible, and the ObjC object gets used mostly when we need to
        return something to AppKit or call something implemented on NSObject.
        The AXObjectCache still keeps one HashMap, now of RenderObjects to
        AccessibilityObjects instead of WebCoreAXObjects, and the
        AccessibilityObject keeps track of its ObjC wrapper.

        * WebCore.xcodeproj/project.pbxproj:
        * page/AXObjectCache.h:
        (WebCore::AXObjectCache::get):