@@ -119,7 +119,7 @@ public:
     virtual bool appendChild(PassRefPtr<Node> newChild, ExceptionCode&);
 
     virtual void remove(ExceptionCode&);
-    virtual bool hasChildNodes() const;
+    bool hasChildNodes() const { return firstChild(); }
     virtual PassRefPtr<Node> cloneNode(bool deep) = 0;
     virtual const AtomicString& localName() const;
     virtual const AtomicString& namespaceURI() const;
